# XcpLight

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  XcpLight.c  XcpLight.h  XcpLight_config.c  XcpLight_config.h  build.sh
source/: CMakeLists.txt  XcpLight.c  XcpLight.h  XcpLightCfg.c  XcpLightCfg.h  XcpLightInternals.h  XcpLightMem.c  XcpLightMem.h  XcpLight_config.c  XcpLight_config.h  XcpLight_internals.h
tests/: BasicCommands.c  CMakeLists.txt  DataAquisition.c  LoginProcedure.c  MemoryAccess.c  MemoryManagement.c  TestHelper.h  Timestamp.c  _TestTemplate.c  main.c  test_BasicCommands.c  test_LoginProcedure.c  test_MemoryAccess.c  test_Template.c  test_Timestamp.c
